<resources>
    <string name="app_name">Expediente CAEPSI</string>
    <string name="str_hoja_intervencion">Hoja de intervención en crisis</string>
    <string name="str_nota_psicologica">Nota psicológica y de evolución</string>
    <string name="str_tratamiento">Plan de tratamiento</string>
    <string name="str_metas">Mapa de alcance de metas</string>
    <string name="str_patogenesis">Mapa de patogénesis</string>
    <string name="str_evaluacion">Proceso de evaluación</string>
    <string name="str_historia_clinica">Historia Clínica</string>
    <string name="str_entrevista_inicial">Entrevista inicial</string>
    <string name="str_ficha_id">Ficha de Indentificación</string>
    <string name="str_asistencia">Control de asistencia</string>
    <string name="str_help">Help</string>
    <string name="str_fab_search_file">Search File</string>
    <string name="str_welcome">Welcome</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="str_files">Expedientes</string>
    <string name="str_home_fragment">Home fragment</string>
    <string name="str_apellido_paterno">Apellido paterno</string>
    <string name="str_apellido_materno">Apellido materno</string>
    <string name="str_name">Nombre</string>
    <string name="str_user_data">Datos del usuario</string>
    <string name="str_sex">Sexo</string>
    <string name="str_age">Edad</string>
    <string name="str_ingreso">Clave de ingreso</string>
    <string name="str_file_id">Clave de expediente</string>
    <string name="str_obs">Observación</string>
    <string name="str_status">Estatus</string>
    <string name="str_therapist">Terapeuta</string>
    <string name="str_yes">Si</string>
    <string name="str_no">No</string>
    <string name="str_attending">Asistencia</string>
    <string name="str_signature">Firma del terapeuta</string>
    <string name="str_curp">CURP</string>
    <string name="str_clave_de_ingreso">Clave de ingreso</string>
    <string name="str_sucursal">Sucursal</string>
    <string name="str_datos_generales">Datos Generales</string>
    <string name="str_primera_vez">Primera vez</string>
    <string name="str_reingreso">Reingreso</string>
    <string name="str_crisis">Crisis</string>
    <string name="str_escolaridad">Escolaridad</string>
    <string name="str_ocupacion">Ocupación</string>
    <string name="str_estado_civil">Estado civil</string>
    <string name="str_nacimiento">Nacimiento</string>
    <string name="str_afromexicano">Afromexicano</string>
    <string name="str_indigena">Indígena</string>
    <string name="str_migrante">Migrante</string>
    <string name="str_religion">Religión</string>
    <string name="str_genero">Género</string>
    <string name="str_hijos">Hijos</string>
    <string name="str_tel_contacto">Teléfono de contacto</string>
    <string name="str_tel_emergencia">Teléfono de emergencia</string>
    <string name="str_contacto">Contacto de emergencia</string>
    <string name="str_motivo_de_consulta">Motivo de Consulta</string>
    <string name="str_areas_de_afeccion">Áreas de afección</string>
    <string name="str_atencion_psicologica">Atención psicológica</string>
    <string name="str_back_atencion_psicologica">Antecedente de atención psicológica</string>
    <string name="str_at_psic_fecha">¿En qué fecha?</string>
    <string name="str_diagnostico_recibido">Diagnóstico recibido</string>
    <string name="str_donde">¿Dónde?</string>
    <string name="str_ant_psiquiatrica">Antecedente de atención psiquiátrica</string>
    <string name="str_atencion_psiquiatrica">Atención psiquiatríca</string>
    <string name="str_tiempo_how">¿Cuánto tiempo?</string>
    <string name="str_trat_psicofarmaco">¿Tiene tratamiento psicofármaco?</string>
    <string name="str_farmacos">Qué fármacos consume?</string>
    <string name="str_consumo_de_sustancias">Consumo de sustancias</string>
    <string name="str_sustancias_lifetime">¿Qué sustancias ha consumido alguna vez a lo largo de tu vida?</string>
    <string name="str_frecuencia_sustancias">¿Con qué frecuencia se ha consumido sustancias en los últimos tres meses?</string>
    <string name="str_lastime_sustancias">¿Cuándo fue la última vez que consumió sustancias?</string>
    <string name="str_enfermedades_no_transmisibles">Enfermedades no transmisibles</string>
    <string name="str_question_no_transmisible">¿Enfermedad no transmisible?</string>
    <string name="str_cual">¿Cuál?</string>
    <string name="str_desde_cuando">¿Desde cuándo?</string>
    <string name="str_tratamiento_farmacologico">Tratamiento farmacológico</string>
    <string name="str_enfermedades_transmisibles">Enfermedades transmisibles</string>
    <string name="str_question_transmisible">¿Enfermedad transmisible?</string>
    <string name="str_preferencia_de_atencion">Preferencia de atención</string>
    <string name="str_modalidad">Modalidad</string>
    <string name="str_sucursal_de_preferencia">Sucursal de preferencia</string>
    <string name="str_plataforma_de_preferencia">Plataforma de preferencia</string>
    <string name="str_dias_de_atencion">Días preferentes de atención</string>
    <string name="str_horario_atencion">Horario proferente de atención</string>
    <string name="str_hora">Hora</string>
    <string name="str_fecha">Fecha</string>
    <string name="str_atencion_crisis">Atención en crisis</string>
    <string name="str_presentan">Se presentan</string>
    <string name="str_conductas_de_riesgo">Conductas de riesgo</string>
    <string name="str_ideacion_suicida">Ideación suicida</string>
    <string name="str_adicciones">Adicciones</string>
    <string name="str_planeacion_suicida">Planeación suicida</string>
    <string name="str_autolesiones">Autolesiones</string>
    <string name="str_tentativa_suicida">Tentativa suicida</string>
    <string name="str_ninguno">Ninguno</string>
    <string name="str_familiograma">Familiograma</string>
    <string name="str_inminente">Inminente</string>
    <string name="str_moderado">Moderado</string>
    <string name="str_leve">Leve</string>
    <string name="str_alto">Alto</string>
    <string name="str_examen_mental">Examen mental</string>
    <string name="str_descripcion_del_problema">Descripción del problema</string>
    <string name="str_nivel_de_riesgo_suicida">Nivel de riesgo suicida</string>
    <string name="str_otra">Otra</string>
    <string name="str_sexual">Sexual</string>
    <string name="str_pareja">Pareja</string>
    <string name="str_social">Social</string>
    <string name="str_laboral">Laboral</string>
    <string name="str_familiar">Familiar</string>
    <string name="str_escolar">Escolar</string>
    <string name="str_recomendaciones">Recomendaciones</string>
    <string name="str_observaciones">Observaciones</string>
    <string name="str_tecnicas">Técnicas</string>
    <string name="str_tecnicas_if">Técnicas (si se aplicaron)</string>
    <string name="str_problemas_presentados">Problemas presentados en la sesión</string>
    <string name="str_semaforo_inicial">Semáforo clínico inicial</string>
    <string name="str_impresion_diagnostica">Impresión diagnóstica DSM o CIE</string>
    <string name="str_num_sesion">Número de sesión</string>
    <string name="str_resultados">Resultados</string>
    <string name="str_prueba_psicologica">Prueba psicológica</string>
    <string name="str_image_capture">Espacio para captura de imagen</string>
    <string name="str_supervisor">Supervisor</string>
    <string name="str_elaborador">Elaborador</string>
    <string name="str_metas_de_resultados_finales">Metas de resultados finales</string>
    <string name="str_objetivos_de_intervencion">Objetivos de intervención</string>
    <string name="str_tecnicas_de_intervencion">Técnicas de intervención</string>
    <string name="str_pronostico">Pronóstico</string>
    <string name="str_procedimiento">Procedimiento</string>
    <string name="str_diagnostico_medico">Diagnóstico Médico</string>
    <string name="str_objetivos">Objetivos</string>
    <string name="str_diagnostico_psicologico">Diagnóstico Psicológico</string>
    <string name="str_semaforo_clinico_definitivo">Semáforo Clínico definitivo</string>
    <string name="str_enfoque_del_tratamiento">Enfoque del tratamiento</string>
    <string name="str_programa_de_tratamiento">Programa de Tratamiento</string>
    <string name="str_meta_de_tratamiento">Meta de tratamiento</string>
    <string name="str_direcccion">Dirección</string>
    <string name="str_etnia">Etnia</string>
    <string name="str_parentesco">Parentesco</string>
    <string name="str_lugar">Lugar</string>
    <string name="str_prueba">Prueba</string>
    <string name="str_interpretacion">Interpretación</string>
    <string name="str_salud_fisica">Salud física</string>
    <string name="str_relaciones_sociales">Relaciones sociales</string>
    <string name="str_salud_psicologica">Salud psicológica</string>
    <string name="str_contexto">Contexto</string>
    <string name="str_instrumentos_aplicados_complementarios">Instrumentos aplicados y resultados complementarios</string>
    <string name="str_impresion_actual">Impresión diagnóstica actual</string>
    <string name="str_bai">BAI</string>
    <string name="str_instrumentos_aplicados_inicial">Instrumentos aplicados y resultados de evaluación inicial</string>
    <string name="str_motivo_consulta_hc_1">Principales antecedentes al motivo de consulta</string>
    <string name="str_antecedentes_heredofamiliares">Antecedentes heredofamiliares</string>
    <string name="str_antecedentes_hc_1">Edad y condición actual de salud de familiares directos</string>
    <string name="str_antecedentes_hc_2">Historia de enfermedades crónicas y o mentales</string>
    <string name="str_antecedentes_hc_3">Descripción de la dinámica de la familia de origen</string>
    <string name="str_periodo_del_desarrollo">Periodo del desarrollo</string>
    <string name="str_desarrollo_hc_1">Historia del desarrollo pre, peri y posnatal</string>
    <string name="str_desarrollo_hc_2">Historia de la primera infancia (2 a 6 años)</string>
    <string name="str_desarrollo_hc_3">Historia de la segunda infancia (7 a 12 años)</string>
    <string name="str_desarrollo_hc_4">Periodo adolescencia (13 a 19 años)</string>
    <string name="str_patrones_adulto">Patrones de ajusta adulto</string>
    <string name="str_patrones_hc_1">Desarrollo Académico y Profesional</string>
    <string name="str_patrones_hc_2">Patrones de Trabajo</string>
    <string name="str_patrones_hc_3">Ajuste Afectivos y Emocionales</string>
    <string name="str_patrones_hc_4">Patrones de Salud y Sexualidad</string>
    <string name="str_patrones_hc_5">Uso de sustancias y Fármacos</string>
    <string name="str_patrones_hc_6">Ajuste Sociales, Recreativos y Culturales</string>
    <string name="str_patrones_hc_7">Dinámica Familiar actual</string>
    <string name="str_examen_hc_1">Conducta y aspecto general del paciente (habitus exterior)</string>
    <string name="str_examen_hc_2">Cognición y estado sensorio motor</string>
    <string name="str_examen_hc_3">Discurso</string>
    <string name="str_examen_hc_4">Contenido del Pensamiento</string>
    <string name="str_examen_hc_5">Creencias y experiencias anormales de la interpretación de los eventos</string>
    <string name="str_examen_hc_6">Afectividad</string>
    <string name="str_examen_hc_7">Juicio</string>
    <string name="str_examen_hc_8">Personalidad</string>
    <string name="str_entrevistador">Información del entrevistador</string>
    <string name="str_entrevistador_hc_1">Sentimientos y reacciones del entrevistador hacia el paciente</string>
    <string name="str_entrevistador_hc_2">Información técnica de la aplicación de la entrevista</string>
    <string name="str_entrevistador_hc_3">Observaciones e indicaciones terapéuticas</string>
    <string name="login">Inicio de sesión</string>
    <string name="str_login_google">Login with Google</string>
    <string name="str_email">Email</string>
</resources>